WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154208
[JSC] ZeroExtend and SignExtend use incorrect addressing on ARM64
https://bugs.webkit.org/show_bug.cgi?id=154208
Summary
[JSC] ZeroExtend and SignExtend use incorrect addressing on ARM64
Benjamin Poulain
Reported
2016-02-12 18:52:36 PST
[JSC] ZeroExtend and SignExtend use incorrect addressing on ARM64
Attachments
Patch
(11.11 KB, patch)
2016-02-12 18:59 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Patch for landing
(11.11 KB, patch)
2016-02-12 19:51 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2016-02-12 18:59:33 PST
Created
attachment 271258
[details]
Patch
Benjamin Poulain
Comment 2
2016-02-12 19:51:39 PST
Created
attachment 271264
[details]
Patch for landing
WebKit Commit Bot
Comment 3
2016-02-12 20:48:41 PST
Comment on
attachment 271264
[details]
Patch for landing Clearing flags on attachment: 271264 Committed
r196544
: <
http://trac.webkit.org/changeset/196544
>
WebKit Commit Bot
Comment 4
2016-02-12 20:48:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug